<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_toggle"
      android:icon="@drawable/ic_play_stop"
      android:title="@string/action_start"
      app:showAsAction="ifRoom" />
  <item
      android:id="@+id/action_connection"
      android:icon="@drawable/ic_info"
      android:title="@string/action_connection"
      app:showAsAction="ifRoom" />
  <item
      android:id="@+id/action_traffic"
      android:icon="@drawable/ic_list"
      android:title="@string/action_traffic"
      app:showAsAction="never" />
  <item
      android:id="@+id/action_simulate"
      android:title="@string/action_simulate"
      app:showAsAction="never" />
  <item
      android:id="@+id/action_clear"
      android:title="@string/action_clear"
      app:showAsAction="never" />
  <item
      android:id="@+id/action_settings"
      android:title="@string/action_settings"
      app:showAsAction="never" />
  <item
      android:id="@+id/action_about"
      android:title="@string/action_about"
      app:showAsAction="never" />
</menu>
